Cambiando interfaces TimeClient para SimpleTimeClient class que ahora hereda el TimeClientPlus interface

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=InterfacesDemo
-main.class=interfacesdemo.InterfacesDemo
+main.class=interfaces.demo.InterfacesDemo
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
